--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,14 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install and test
+      - name: Install dependencies
+        run: npm install
+      - name: Run unit tests
+        run: npm run ci:test
+      - name: Start server and run end-to-end tests
         run: |
-          npm install
-          npm run ci:test
+          npm run dev &
+          npx wait-on http-get://0.0.0.0:5173 --timeout 30000
+          npm run e2e
+        env:
+          CI: true
