--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,14 +15,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install dependencies
-        run: npm install
-      - name: Run unit tests
-        run: npm run ci:test
-      - name: Start server and run end-to-end tests
+      - name: npm install and test
         run: |
-          npm run dev &
-          npx wait-on http-get://0.0.0.0:5173 --timeout 30000
-          npm run e2e
-        env:
-          CI: true
+          npm install
+          npm run ci:test
